--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,19 @@
 <main role="main" class="container">
   <div class="row">
     <div class="col-md-8">
+
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+          </div>
+        {% endfor %}
+      {% endif %}
+
       {% block content %}{% endblock %}
     </div>
+
+    
     <div class="col-md-4">
       <div class="content-section">
         <h3>Sidebar</h3>
@@ -58,9 +69,7 @@
   </div>
 </main>
 
-<footer class="footer">
-  <p>django-blog &copy; 2020</p>
-</footer>
+
  <!-- jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
