--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 <header class="site-header">
   <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
     <div class="container">
-      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Blog</a>
+      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">DJANGO</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
@@ -64,10 +64,10 @@
         <h3>categories</h3>
         <p class='text-muted'>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Latest Posts</li>
-            <li class="list-group-item list-group-item-light">Announcements</li>
-            <li class="list-group-item list-group-item-light">Calendars</li>
-            <li class="list-group-item list-group-item-light">etc</li>
+            <li class="list-group-item list-group-item-light">Sports</li>
+            <li class="list-group-item list-group-item-light">Education</li>
+            <li class="list-group-item list-group-item-light">Technology</li>
+            <li class="list-group-item list-group-item-light">Politics</li>
           </ul>
         </p>
       </div>
